@@ -46,6 +46,10 @@
 
 package org.broadinstitute.sting.gatk.walkers.compression.reducereads;
 
+import it.unimi.dsi.fastutil.objects.Object2LongOpenHashMap;
+import it.unimi.dsi.fastutil.objects.ObjectAVLTreeSet;
+import it.unimi.dsi.fastutil.objects.ObjectArrayList;
+import it.unimi.dsi.fastutil.objects.ObjectSortedSet;
 import net.sf.samtools.SAMFileHeader;
 import net.sf.samtools.SAMFileWriter;
 import net.sf.samtools.SAMProgramRecord;
@@ -71,7 +75,6 @@ import org.broadinstitute.sting.utils.sam.BySampleSAMFileWriter;
 import org.broadinstitute.sting.utils.sam.GATKSAMRecord;
 import org.broadinstitute.sting.utils.sam.ReadUtils;
 
-import java.util.*;
 
 /**
  * Reduces the BAM file using read based compression that keeps only essential information for variant calling
@@ -107,7 +110,7 @@ import java.util.*;
 @PartitionBy(PartitionType.CONTIG)
 @ReadFilters({UnmappedReadFilter.class, NotPrimaryAlignmentFilter.class, DuplicateReadFilter.class, FailsVendorQualityCheckFilter.class, BadCigarFilter.class})
 @Downsample(by=DownsampleType.BY_SAMPLE, toCoverage=40)
-public class ReduceReads extends ReadWalker<LinkedList<GATKSAMRecord>, ReduceReadsStash> {
+public class ReduceReads extends ReadWalker<ObjectArrayList<GATKSAMRecord>, ReduceReadsStash> {
 
     @Output
     private StingSAMFileWriter out = null;
@@ -240,10 +243,10 @@ public class ReduceReads extends ReadWalker<LinkedList<GATKSAMRecord>, ReduceRea
     
     int nCompressedReads = 0;
 
-    HashMap<String, Long> readNameHash;                                     // This hash will keep the name of the original read the new compressed name (a number).
+    Object2LongOpenHashMap<String> readNameHash;                         // This hash will keep the name of the original read the new compressed name (a number).
     Long nextReadNumber = 1L;                                               // The next number to use for the compressed read name.
 
-    SortedSet<GenomeLoc> intervalList;
+    ObjectSortedSet<GenomeLoc> intervalList;
 
     // IMPORTANT: DO NOT CHANGE THE VALUE OF THIS CONSTANT VARIABLE; IT IS NOW PERMANENTLY THE @PG NAME THAT EXTERNAL TOOLS LOOK FOR IN THE BAM HEADER
     public static final String PROGRAM_RECORD_NAME = "GATK ReduceReads";   // The name that will go in the @PG tag
@@ -257,8 +260,8 @@ public class ReduceReads extends ReadWalker<LinkedList<GATKSAMRecord>, ReduceRea
     public void initialize() {
         super.initialize();
         GenomeAnalysisEngine toolkit = getToolkit();
-        readNameHash = new HashMap<String, Long>();           // prepare the read name hash to keep track of what reads have had their read names compressed
-        intervalList = new TreeSet<GenomeLoc>();              // get the interval list from the engine. If no interval list was provided, the walker will work in WGS mode
+        readNameHash = new Object2LongOpenHashMap<String>(100000);     // prepare the read name hash to keep track of what reads have had their read names compressed
+        intervalList = new ObjectAVLTreeSet<GenomeLoc>();                          // get the interval list from the engine. If no interval list was provided, the walker will work in WGS mode
 
         if (toolkit.getIntervals() != null)
             intervalList.addAll(toolkit.getIntervals());
@@ -295,8 +298,8 @@ public class ReduceReads extends ReadWalker<LinkedList<GATKSAMRecord>, ReduceRea
      * @return a linked list with all the reads produced by the clipping operations
      */
     @Override
-    public LinkedList<GATKSAMRecord> map(ReferenceContext ref, GATKSAMRecord read, RefMetaDataTracker metaDataTracker) {
-        LinkedList<GATKSAMRecord> mappedReads;
+    public ObjectArrayList<GATKSAMRecord> map(ReferenceContext ref, GATKSAMRecord read, RefMetaDataTracker metaDataTracker) {
+        ObjectArrayList<GATKSAMRecord> mappedReads;
         if (!debugRead.isEmpty() && read.getReadName().contains(debugRead))
                 System.out.println("Found debug read!");
 
@@ -325,18 +328,18 @@ public class ReduceReads extends ReadWalker<LinkedList<GATKSAMRecord>, ReduceRea
             if (HARD_CLIP_TO_INTERVAL)
                 mappedReads = hardClipReadToInterval(read);                                                             // Hard clip the remainder of the read to the desired interval
             else {
-                mappedReads = new LinkedList<GATKSAMRecord>();
+                mappedReads = new ObjectArrayList<GATKSAMRecord>();
                 mappedReads.add(read);
             }
         }
         else {
-            mappedReads = new LinkedList<GATKSAMRecord>();
+            mappedReads = new ObjectArrayList<GATKSAMRecord>();
             if (!read.isEmpty())
                 mappedReads.add(read);
         }
 
         if (!mappedReads.isEmpty() && !DONT_USE_SOFTCLIPPED_BASES) {
-            LinkedList<GATKSAMRecord> tempList = new LinkedList<GATKSAMRecord>();
+            ObjectArrayList<GATKSAMRecord> tempList = new ObjectArrayList<GATKSAMRecord>();
             for (GATKSAMRecord mRead : mappedReads) {
                 GATKSAMRecord clippedRead = ReadClipper.hardClipLowQualitySoftClips(mRead, minBaseQual);
                 if (!clippedRead.isEmpty())
@@ -375,7 +378,7 @@ public class ReduceReads extends ReadWalker<LinkedList<GATKSAMRecord>, ReduceRea
      * @param stash       the stash that keeps the reads in order for processing
      * @return the stash with all reads that have not been processed yet
      */
-    public ReduceReadsStash reduce(LinkedList<GATKSAMRecord> mappedReads, ReduceReadsStash stash) {
+    public ReduceReadsStash reduce(ObjectArrayList<GATKSAMRecord> mappedReads, ReduceReadsStash stash) {
         if (debugLevel == 1)
             stash.print();
 
@@ -387,7 +390,7 @@ public class ReduceReads extends ReadWalker<LinkedList<GATKSAMRecord>, ReduceRea
                 throw new ReviewedStingException("Empty read sent to reduce, this should never happen! " + read.getReadName() + " -- " + read.getCigar() + " -- " + read.getReferenceName() + ":" + read.getAlignmentStart() + "-" + read.getAlignmentEnd());
 
             if (originalRead) {
-                List<GATKSAMRecord> readsReady = new LinkedList<GATKSAMRecord>();
+                ObjectArrayList<GATKSAMRecord> readsReady = new ObjectArrayList<GATKSAMRecord>();
                 readsReady.addAll(stash.getAllReadsBefore(read));
                 readsReady.add(read);
 
@@ -433,8 +436,8 @@ public class ReduceReads extends ReadWalker<LinkedList<GATKSAMRecord>, ReduceRea
      * @param read the read to be hard clipped to the interval.
      * @return a shallow copy of the read hard clipped to the interval
      */
-    private LinkedList<GATKSAMRecord> hardClipReadToInterval(GATKSAMRecord read) {
-        LinkedList<GATKSAMRecord> clippedReads = new LinkedList<GATKSAMRecord>();
+    private ObjectArrayList<GATKSAMRecord> hardClipReadToInterval(GATKSAMRecord read) {
+        ObjectArrayList<GATKSAMRecord> clippedReads = new ObjectArrayList<GATKSAMRecord>();
 
         GenomeLoc intervalOverlapped = null;       // marks the interval to which the original read overlapped (so we can cut all previous intervals from the list)
 
@@ -588,7 +591,7 @@ public class ReduceReads extends ReadWalker<LinkedList<GATKSAMRecord>, ReduceRea
             System.out.println("BAM: " + read.getCigar() + " " + read.getAlignmentStart() + " " + read.getAlignmentEnd());
 
         if (!DONT_COMPRESS_READ_NAMES)
-            compressReadName(read);
+            nextReadNumber = compressReadName(readNameHash, read, nextReadNumber);
 
         writerToUse.addAlignment(read);
     }
@@ -623,21 +626,28 @@ public class ReduceReads extends ReadWalker<LinkedList<GATKSAMRecord>, ReduceRea
      * Compresses the read name using the readNameHash if we have already compressed
      * this read name before.
      *
-     * @param read any read
+     * @param hash           the hash table containing the read name to compressed read name map
+     * @param read           any read
+     * @param nextReadNumber the number to use in the compressed read name in case this is a new read name
+     * @return the next number to use in the compressed read name
      */
-    private void compressReadName(GATKSAMRecord read) {
-        String name = read.getReadName();
-        String compressedName = read.isReducedRead() ? "C" : "";
-        final Long readNumber = readNameHash.get(name);
-        if (readNumber != null) {
-            compressedName += readNumber.toString();
-        } else {
-            readNameHash.put(name, nextReadNumber);
-            compressedName += nextReadNumber.toString();
-            nextReadNumber++;
+    protected static long compressReadName(final Object2LongOpenHashMap<String> hash, final GATKSAMRecord read, final long nextReadNumber) {
+        final String name = read.getReadName();
+        final StringBuilder compressedName = new StringBuilder();
+        long result = nextReadNumber;
+        if (read.isReducedRead()) {
+            compressedName.append("C");
         }
-
-        read.setReadName(compressedName);
+        final Long readNumber = hash.get(name);
+        if (readNumber != null) {
+            compressedName.append(readNumber);
+        } else {
+            hash.put(name, nextReadNumber);
+            compressedName.append(nextReadNumber);
+            result++;
+        }
+        read.setReadName(compressedName.toString());
+        return result;
     }
 
     /**
@@ -649,8 +659,8 @@ public class ReduceReads extends ReadWalker<LinkedList<GATKSAMRecord>, ReduceRea
      * @param read the read
      * @return Returns true if the read is the original read that went through map().
      */
-    private boolean isOriginalRead(LinkedList<GATKSAMRecord> list, GATKSAMRecord read) {
-        return isWholeGenome() || list.getFirst().equals(read);
+    private boolean isOriginalRead(ObjectArrayList<GATKSAMRecord> list, GATKSAMRecord read) {
+        return isWholeGenome() || list.get(0).equals(read);
     }
 
     /**
